--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 					<p>Email: <a href="mailto:abc@gmail.com
 						?subject=You%20are%20hired!!">abc@gmail.com</a>
 					<p>
-					<p><a href="71998479+davetam88@users.noreply.github.com">David's Github Email</a>
+						
+					<p><a href="mailto:71998479+davetam88@users.noreply.github.com">David's Github Email</a>
 					<p>
 					<p><a href="https://www.linkedin.com/in/david-tam-7242111b9/">David's Linkedin Page</a> </p>
 					<p></p>
