--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 		<div class="logo">David Tam</div>
 		<nav>
 			<ul id="menu">
-				<!-- xx link make  -->
 				<li><a href="#home">Home</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
@@ -36,7 +35,6 @@
 				<div class="item">
 					<img src="images/home/davepic.jpg" alt="David Tam - Profile Photo" class="image-enhanced">
 				</div>
-				<!-- xx intro -->
 				<div class="item">
 					<p class="intro">Hi! I'm David Tam</p>
 					<p>I am an experienced software developer living in Boston, Massachusetts.</p>
@@ -60,7 +58,8 @@
 		</section>
 
 		<!-- About me -->
-		<section class="dark-background">
+		<section id="about" class="dark-background">
+<!-- 		<section class="dark-background"> -->
 			<h2>About me</h2>
 			<div class="group">
 				<div class="item item-double">
@@ -101,7 +100,7 @@
 
 
 		<!-- Portfolio -->
-		<section>
+		<section id="portfolio">
 			<h2>Portfolio</h2>
 			<div class="group">
 				<div class="item">
@@ -134,7 +133,8 @@
 		</section>
 
 		<!-- Contact -->
-		<section>
+
+		<section id="contact">
 			<h2>Contact</h2>
 			<div class="group">
 				<div class="item">
@@ -156,8 +156,7 @@
 					<p>Email: <a href="mailto:abc@gmail.com
 						?subject=You%20are%20hired!!">abc@gmail.com</a>
 					<p>
-						
-					<p><a href="mailto:71998479+davetam88@users.noreply.github.com">David's Github Email</a>
+					<p><a href="https://github.com/davetam88">David's Github Page</a>
 					<p>
 					<p><a href="https://www.linkedin.com/in/david-tam-7242111b9/">David's Linkedin Page</a> </p>
 					<p></p>
