--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
@@ -31,6 +31,7 @@
 
 		<!-- Introduction -->
 		<section>
+
 			<div class="group">
 				<div class="item">
 					<img src="images/home/davepic.jpg" alt="David Tam - Profile Photo" class="image-enhanced">
@@ -59,7 +60,6 @@
 
 		<!-- About me -->
 		<section id="about" class="dark-background">
-<!-- 		<section class="dark-background"> -->
 			<h2>About me</h2>
 			<div class="group">
 				<div class="item item-double">
@@ -96,6 +96,7 @@
 					<img src="images/about/hiking.jpg" alt="hiking"
 						class="image-enhanced">
 				</div>
+			</div>				
 		</section>
 
 
@@ -138,7 +139,9 @@
 			<h2>Contact</h2>
 			<div class="group">
 				<div class="item">
-					<form action="https://formspree.io/davetam88@gmail.com" method="post">
+
+					<form action="https://formspree.io/f/davetam88@gmail.com" method="POST">
+
 						<label for="user-name">Name:</label>
 						<input id="user-name" type="text" name="name">
 
@@ -153,8 +156,7 @@
 				<div class="item item-double">
 
 					<p>Phone #: <a href="tel:617.617.8380">617.617.8380</a></p>
-					<p>Email: <a href="mailto:abc@gmail.com
-						?subject=You%20are%20hired!!">abc@gmail.com</a>
+					<p>Email: <a href="mailto:abc@gmail.com?subject=You%20are%20hired!!">abc@gmail.com</a>
 					<p>
 					<p><a href="https://github.com/davetam88">David's Github Page</a>
 					<p>
