--- a/index.html
+++ b/index.html
@@ -140,18 +140,15 @@
 			<div class="group">
 				<div class="item">
 
-					<form action="https://formspree.io/f/davetam88@gmail.com" method="POST">
-
-						<label for="user-name">Name:</label>
-						<input id="user-name" type="text" name="name">
-
-						<label for="user-email">Email:</label>
-						<input id="user-email" type="text" name="email">
-
-						<label for="user-message">Message:</label>
-						<textarea id="user-message" name="message"></textarea>
-						<button type="submit">Submit</button>
+					<form id="my-form" action="https://formspree.io/f/xzbkredg" method="POST">
+						<label>Email:</label>
+						<input type="email" name="email" />
+						<label>Message:</label>
+						<input type="text" name="message" />
+						<button id="my-form-button">Submit</button>
+						<p id="my-form-status"></p>
 					</form>
+
 				</div>
 				<div class="item item-double">
 
