--- a/index.html
+++ b/index.html
@@ -63,34 +63,32 @@
 			<h2>About me</h2>
 			<div class="group">
 				<div class="item item-double">
-					<p>After graduating college, I became a software engineer and I had been working on all kinds of
-						projects.
-						Mostly on the front end, database and network management side of things. I had joined a dry
-						cleaning
-						franchise in 2002 and then opened my own dry cleaning company in 2008, which I have been
-						working at to
-						this day. To support my business needs, I actively work on coding projects using all kinds
-						of
-						technologies. The custom software I created was very easy to use, feature rich and very
-						reliablbe, It
-						handling accounts for hundreds of my customers. I found software development very
-						interesting, rewarding
-						and challenging. Due to the pandemic, I found myself have much more time than before.
-						Therefore, I would
-						like to get my coding skill set more up to date and find a job besides what I am doing now.
-					</p>
-					<p>As a student at <a href="http://thinkful.com">Thinkful</a>,
-						I've learned a lot of techniques to become a much better software developer and I cannot
-						wait to apply
-						what I learn to the projects I will be working on.</p>
-
-
-					<p>In my spare time, I like to go hiking, biking, kayaking, fishing, watch Netflix and football.
+					<p>
+						After graduating college, I became a software engineer and I had been working on all kinds of
+						projects. Mostly on the front end, database and network management side of things. I had joined
+						a dry cleaning franchise in 2002 and then opened my own dry cleaning company in 2008, which I
+						have been working at to this day. To support my business needs, I actively work on coding
+						projects using all kinds of technologies. The custom software I created was very easy to use,
+						feature rich and very reliable, It handling accounts for hundreds of my customers. I found
+						software development very interesting, rewarding and challenging. Due to the pandemic, I found
+						myself have much more time than before. Therefore, I would like to get my coding skill set more
+						up to date and find a job besides what I am doing now.
 					</p>
 
-					<p>If you're looking to hire a experienced developer, please reach out! I am so excited to work
-						with other
-						developers to build great software.</p>
+					<p>
+						As a student at <a href="http://thinkful.com">Thinkful</a>,
+						I've learned a lot of techniques to become a much better software developer and I cannot wait to
+						apply what I learn to the projects I will be working on.
+					</p>
+
+					<p>
+						In my spare time, I like to go hiking, biking, kayaking, fishing, watch Netflix and football.
+					</p>
+
+					<p>
+						If you're looking to hire an experienced developer, please reach out! I am so excited to work
+						with other developers to build great software.
+					</p>
 				</div>
 				<div class="item">
 					<img src="images/about/hiking.jpg" alt="hiking" class="image-enhanced">
@@ -139,7 +137,7 @@
 			<div class="group">
 				<div class="item">
 
-					<form id="my-form" action="https://formspree.io/f/xzbkredg" method="POST">
+					<form action="https://formspree.io/davetam88@gmail.com" method="post">
 						<label for="user-name">Name:</label>
 						<input id="user-name" type="text" name="name">
 
@@ -149,15 +147,6 @@
 						<label for="user-message">Message:</label>
 						<textarea id="user-message" name="message"></textarea>
 						<button type="submit">Submit</button>
-						
-
-
-						<!-- <label>Email:</label>
-						<input type="email" name="email" />
-						<label>Message:</label>
-						<input type="text" name="message" />
-						<button id="my-form-button">Submit</button>
-						<p id="my-form-status"></p> -->
 					</form>
 
 				</div>
