--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 			<h2>Contact</h2>
 			<div class="group">
 				<div class="item">
-
-					<form action="https://formspree.io/davetam88@gmail.com" method="post">
+				  <form action="https://formspree.io/f/davetam88@gmail.com" method="POST">
 						<label for="user-name">Name:</label>
 						<input id="user-name" type="text" name="name">
 
