added hidden input

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 			<div class="group">
 				<div class="item">
 				  <form action="https://formspree.io/f/davetam88@gmail.com" method="POST">
+					<input type="hidden" name="next" value="https://github.com/davetam88/portfolio-3-">
 						<label for="user-name">Name:</label>
 						<input id="user-name" type="text" name="name">
 
